--- a/index.html
+++ b/index.html
@@ -190,6 +190,57 @@
 
             }
         }
+
+
+
+
+
+
+
+        @media only screen and (max-width:400px) {
+    .homeImage{
+        display: none;
+    }
+    .sideMenu{
+        margin-right: 0px;
+    }
+    .header{
+        /* background-color: aqua; */
+        position: absolute;
+        width: 100%;
+    }
+    .menuItems{
+        left: 50px;
+        bottom: 90px;
+    }
+    .logoDiv{
+        margin-left: 0px;
+    }
+    .bottomBox{
+        left: 50px;
+        bottom: 30px;
+    }
+
+
+    .name{
+        font-size: 60px;
+    }
+
+
+
+    .myDes{
+        font-size: 15px;
+    }
+
+    #closeButton{
+        top: 15%;
+        right: 40px;
+    }
+    .ItemM{
+        font-size: 80px;
+        line-height: 90px;
+    }
+}
     </style>
 
 
