Update2 index.html

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     .name{
         font-size: 60px;
         position: absolute;
-        bottom: 0px;
+        bottom: -20px;
     }
 
 
@@ -241,7 +241,7 @@
     .myDes{
         font-size: 15px;
         position: absolute;
-        bottom: 420px;
+        bottom: 650%;
     }
 
     #closeButton{
