--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     .myDes{
         font-size: 15px;
         position: absolute;
-        bottom: 650%;
+        bottom: 400px;
     }
 
     #closeButton{
