--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@ body{
     transition: all 0.4s;
     animation-timing-function: cubic-bezier(0.6, -0.28, 0.735, 0.045);
     z-index: 50;
+    overflow: hidden;
 }
 .aboutHeading{
     font-size: 40px;
