--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ body{
         /* font-weight: bold; */
     }
     .aboutDes{
-        width: 400px;
+        width: 90%;
         overflow: scroll;
     }
 }
